<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_height"
        android:background="@drawable/bg_home_header_gradient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="@dimen/header_icon_size"
        android:layout_height="@dimen/header_icon_size"
        android:layout_marginStart="@dimen/header_icon_margin_start"
        android:layout_marginTop="@dimen/header_icon_margin_top"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/app_name"
        app:tint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myRecipesTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/header_title_margin_start"
        android:text="@string/my_recipes"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/header_title_text_size_large"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/backBtn"
        app:layout_constraintTop_toTopOf="@id/backBtn"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"
        app:layout_constraintEnd_toStartOf="@id/recipesCountTv" />

    <TextView
        android:id="@+id/recipesCountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/my_recipes_count_height"
        android:minWidth="@dimen/my_recipes_count_min_width"
        android:layout_marginEnd="@dimen/header_action_margin_end"
        android:background="@drawable/bg_count_pill"
        android:gravity="center"
        android:paddingStart="@dimen/my_recipes_count_padding_horizontal"
        android:paddingEnd="@dimen/my_recipes_count_padding_horizontal"
        android:text="1 recipe"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/action_button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/backBtn"
        app:layout_constraintBottom_toBottomOf="@id/backBtn" />

    <TextView
        android:id="@+id/myRecipesEmptyTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/my_recipes_empty_margin_horizontal"
        android:layout_marginEnd="@dimen/my_recipes_empty_margin_horizontal"
        android:text="@string/no_recipes_yet"
        android:textSize="@dimen/label_text_size"
        android:gravity="center"
        android:textColor="#666666"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/headerBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myRecipesRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="@dimen/list_content_padding_horizontal"
        android:paddingTop="@dimen/my_recipes_list_padding_top"
        android:paddingEnd="@dimen/list_content_padding_horizontal"
        android:paddingBottom="@dimen/list_content_padding_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBackground"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/myRecipesAddFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/my_recipes_fab_margin"
        android:src="@android:drawable/ic_input_add"
        android:contentDescription="@string/add_recipe"
        app:backgroundTint="#F57C3B"
        app:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>